5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1594_1801.log
== TEST (2019-04-04 12:49:52) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(var)
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:50:04) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print(var1)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:50:11) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print(var1)
-- EXECUTION TIME:
0.144821
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:50:54) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print("var1 ")
-- OUTPUT:
var1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:51:16) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print(var1," ")
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:51:34) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print(var1," ")
-- EXECUTION TIME:
0.213349
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livrolivrolivrolivrolivrolivrolivrolivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carrocarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:51:41) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4 * var3
print(var1" ")
-- ERROR:
File "XXXX", line 5
    print(var1" ")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:52:23) 
-- CODE:
var4= input("Fei", " ")
var3= int(input("XX"))

var1= var4 * var3
print(var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var4= input("Fei", " ")
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:52:38) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= var4, " " * var3
print(var1)
-- OUTPUT:
('livro', '        ')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:53:06) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= (var4, " ") * var3
print(var1)
-- OUTPUT:
('livro', ' ', 'livro', ' ', 'livro', ' ', 'livro', ' ', 'livro', ' ', 'livro', ' ', 'livro', ' ', 'livro', ' ')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:53:35) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= (var4" ") * var3
print(var1)
-- ERROR:
File "XXXX", line 4
    var1= (var4" ") * var3
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:53:45) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= (var4 ) * var3
print(var1)
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:54:25) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= (var4+" " ) * var3
print(var1)
-- OUTPUT:
livro livro livro livro livro livro livro livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:54:34) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= (var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.197015
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livro livro livro livro livro livro livro livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carro carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:54:41) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))

var1= (var4+" " ) * var3
print(var1)
-- OUTPUT:
livro livro livro livro livro livro livro livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:55:31) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('Boll')

var1= (var5 + var4+" " ) * var3
print(var1)
-- OUTPUT:
Bolllivro Bolllivro Bolllivro Bolllivro Bolllivro Bolllivro Bolllivro Bolllivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:55:50) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('fire')

var1= (var5 + var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.130593
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
firelivro firelivro firelivro firelivro firelivro firelivro firelivro firelivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
firecarro firecarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
firecaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:55:51) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('fire')

var1= (var5 + var4+" " ) * var3
print(var1)
-- OUTPUT:
firelivro firelivro firelivro firelivro firelivro firelivro firelivro firelivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:05) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('fire')

var1= (var5 +" " var4+" " ) * var3
print(var1)
-- ERROR:
File "XXXX", line 5
    var1= (var5 +" " var4+" " ) * var3
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:11) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('fire')

var1= (var5 +" "+ var4+" " ) * var3
print(var1)
-- OUTPUT:
fire livro fire livro fire livro fire livro fire livro fire livro fire livro fire livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:56:21) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('fire')

var1= (var5 +" "+ var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.176277
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
fire livro fire livro fire livro fire livro fire livro fire livro fire livro fire livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
fire carro fire carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
fire caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:56:34) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('abra')

var1= (var5 +" "+ var4+" " ) * var3
print(var1)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:56:58) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('abra')

var1= (var5 +" "+ var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.127712
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:57:08) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('Abra')

var1= (var5 +" "+ var4+" " ) * var3
print(var1)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:57:23) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5= ('Abra')

var1= (var5 +" "+ var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.213376
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:58:31) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= (var5 +" "+ var4+" " ) * var3
print(abra,var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var1= (var5 +" "+ var4+" " ) * var3
NameError: name 'var5' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:58:51) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( var4+" " ) * var3
print(abra,var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(abra,var1)
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:59:04) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( var4+" " ) * var3
print("abra",var1)
-- OUTPUT:
abra livro livro livro livro livro livro livro livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 12:59:27) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( var4+" " ) * var3
print("abra",var1)
-- EXECUTION TIME:
0.159411
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro livro livro livro livro livro livro livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 12:59:49) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( "abra" +var4+" " ) * var3
print(var1)
-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:00:05) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( "abra " +var4+" " ) * var3
print(var1)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:00:14) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( "abra " +var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.140205
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:00:30) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))


var1= ( var4+" " ) * var3
print(var1)
-- OUTPUT:
livro livro livro livro livro livro livro livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:01:19) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5 = ("Abra")


var1= (var5 + " "+ var4+" " ) * var3
print(var1)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 13:01:34) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5 = ("Abra")


var1= (var5 + " "+ var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.227385
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:02) 
-- CODE:
var4= input("Fei")
var3= int(input("XX"))
var5 = ("Abra")


var1= (var5 + " "+ var4+" " ) * var3
print(var1)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:13) 
-- CODE:
var4= input("Fei ")
var3= int(input("XX "))
var5 = ("Abra")


var1= (var5 + " "+ var4+" " ) * var3
print(var1)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:03:13) 
-- CODE:
var4= input("Fei ")
var3= int(input("XX "))
var5 = ("Abra")


var1= (var5 + " "+ var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.151699
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 13:04:08) 
-- CODE:
var4= input("Fei ")
var3= int(input("XX "))
var5 = ("Abra")


var1= (var5 + " "+ var4+" " ) * var3
print(var1)
-- EXECUTION TIME:
0.217999
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
